Make page slightly wider to prevent wrapping
First sentence had an orphaned word on a third line.

--- a/src/main.styl
+++ b/src/main.styl
@@ -26,7 +26,7 @@ ul
 main
   line-height 1.4
   margin 2rem auto
-  max-width 350px
+  max-width 360px
   text-align center
   transition all ease .1s
 
